// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container displayCards() should match snapshot 1`] = `[MockFunction]`;

exports[`Container displayCards() should match snapshot 2`] = `
[MockFunction] {
  "calls": Array [
    Array [],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": <Component
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#2D71A8",
            "color": "#ACC6D0",
            "height": "100%",
            "padding": 20,
            "width": 750,
          }
        }
      >
        <Component
          style={
            Object {
              "width": 730,
            }
          }
        >
          <RalewayText
            style={
              Object {
                "color": "#53CFFF",
                "fontSize": 16,
              }
            }
            text="Here's the schedule for"
          />
          <RalewayBoldText
            style={
              Object {
                "color": "#FFF",
                "fontSize": 16,
                "marginBottom": 10,
              }
            }
            text="25th March, 2019"
          />
        </Component>
        <Themed.ListItem
          bottomDivider={true}
          containerStyle={
            Object {
              "backgroundColor": "#FFF",
              "borderRadius": 10,
              "width": 730,
            }
          }
          leftIcon={
            <Themed.Icon
              color="#2D71A8"
              name="trash"
              onPress={[Function]}
              type="font-awesome"
            />
          }
          rightIcon={
            <Themed.Icon
              color="#2D71A8"
              name="chevron-circle-right"
              type="font-awesome"
            />
          }
          subtitle="1 exercises"
          subtitleStyle={
            Object {
              "color": "#53CFFF",
              "fontFamily": "raleway",
            }
          }
          title="Arm Day"
          titleStyle={
            Object {
              "color": "#2D71A8",
              "fontFamily": "raleway",
            }
          }
        />
        <Themed.ListItem
          bottomDivider={true}
          containerStyle={
            Object {
              "backgroundColor": "#FFF",
              "borderRadius": 10,
              "marginBottom": 10,
              "width": 730,
            }
          }
          leftIcon={
            <Themed.Icon
              color="#2D71A8"
              name="trash"
              onPress={[Function]}
              type="font-awesome"
            />
          }
          rightIcon={
            <Themed.Icon
              color="#2D71A8"
              name="chevron-circle-right"
              type="font-awesome"
            />
          }
          subtitle="1 exercises"
          subtitleStyle={
            Object {
              "color": "#53CFFF",
              "fontFamily": "raleway",
            }
          }
          title="Leg Day"
          titleStyle={
            Object {
              "color": "#2D71A8",
              "fontFamily": "raleway",
            }
          }
        />
        <Component
          style={
            Object {
              "width": 730,
            }
          }
        >
          <RalewayText
            style={
              Object {
                "color": "#53CFFF",
                "fontSize": 16,
                "marginBottom": 10,
                "marginTop": 30,
              }
            }
            text="Still not tired? Add another routine:"
          />
        </Component>
        <Component
          style={
            Object {
              "width": 730,
            }
          }
        >
          <ForwardRef(Themed.Button)
            buttonStyle={
              Object {
                "backgroundColor": "#FFF",
                "borderRadius": 10,
              }
            }
            icon={
              <Themed.Icon
                color="#2D71A8"
                iconStyle={
                  Object {
                    "position": "absolute",
                    "right": -75,
                  }
                }
                name="plus"
                size={18}
                type="font-awesome"
              />
            }
            iconRight={true}
            onPress={[Function]}
            testID="add-routine-button"
            title="Add New Routine"
            titleStyle={
              Object {
                "color": "#2D71A8",
                "fontFamily": "raleway-bold",
              }
            }
          />
        </Component>
      </Component>,
    },
  ],
}
`;

exports[`Container displayCards() should match snapshot 3`] = `
[MockFunction] {
  "calls": Array [
    Array [],
    Array [],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": <Component
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#2D71A8",
            "color": "#ACC6D0",
            "height": "100%",
            "padding": 20,
            "width": 750,
          }
        }
      >
        <Component
          style={
            Object {
              "width": 730,
            }
          }
        >
          <RalewayText
            style={
              Object {
                "color": "#53CFFF",
                "fontSize": 16,
              }
            }
            text="Here's the schedule for"
          />
          <RalewayBoldText
            style={
              Object {
                "color": "#FFF",
                "fontSize": 16,
                "marginBottom": 10,
              }
            }
            text="25th March, 2019"
          />
        </Component>
        <Themed.ListItem
          bottomDivider={true}
          containerStyle={
            Object {
              "backgroundColor": "#FFF",
              "borderRadius": 10,
              "width": 730,
            }
          }
          leftIcon={
            <Themed.Icon
              color="#2D71A8"
              name="trash"
              onPress={[Function]}
              type="font-awesome"
            />
          }
          rightIcon={
            <Themed.Icon
              color="#2D71A8"
              name="chevron-circle-right"
              type="font-awesome"
            />
          }
          subtitle="1 exercises"
          subtitleStyle={
            Object {
              "color": "#53CFFF",
              "fontFamily": "raleway",
            }
          }
          title="Arm Day"
          titleStyle={
            Object {
              "color": "#2D71A8",
              "fontFamily": "raleway",
            }
          }
        />
        <Themed.ListItem
          bottomDivider={true}
          containerStyle={
            Object {
              "backgroundColor": "#FFF",
              "borderRadius": 10,
              "marginBottom": 10,
              "width": 730,
            }
          }
          leftIcon={
            <Themed.Icon
              color="#2D71A8"
              name="trash"
              onPress={[Function]}
              type="font-awesome"
            />
          }
          rightIcon={
            <Themed.Icon
              color="#2D71A8"
              name="chevron-circle-right"
              type="font-awesome"
            />
          }
          subtitle="1 exercises"
          subtitleStyle={
            Object {
              "color": "#53CFFF",
              "fontFamily": "raleway",
            }
          }
          title="Leg Day"
          titleStyle={
            Object {
              "color": "#2D71A8",
              "fontFamily": "raleway",
            }
          }
        />
        <Component
          style={
            Object {
              "width": 730,
            }
          }
        >
          <RalewayText
            style={
              Object {
                "color": "#53CFFF",
                "fontSize": 16,
                "marginBottom": 10,
                "marginTop": 30,
              }
            }
            text="Still not tired? Add another routine:"
          />
        </Component>
        <Component
          style={
            Object {
              "width": 730,
            }
          }
        >
          <ForwardRef(Themed.Button)
            buttonStyle={
              Object {
                "backgroundColor": "#FFF",
                "borderRadius": 10,
              }
            }
            icon={
              <Themed.Icon
                color="#2D71A8"
                iconStyle={
                  Object {
                    "position": "absolute",
                    "right": -75,
                  }
                }
                name="plus"
                size={18}
                type="font-awesome"
              />
            }
            iconRight={true}
            onPress={[Function]}
            testID="add-routine-button"
            title="Add New Routine"
            titleStyle={
              Object {
                "color": "#2D71A8",
                "fontFamily": "raleway-bold",
              }
            }
          />
        </Component>
      </Component>,
    },
    Object {
      "type": "return",
      "value": <Component
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#2D71A8",
            "color": "#ACC6D0",
            "height": "100%",
            "padding": 20,
            "width": 750,
          }
        }
      >
        <Component
          style={
            Object {
              "width": 730,
            }
          }
        >
          <RalewayText
            style={
              Object {
                "color": "#53CFFF",
                "fontSize": 16,
              }
            }
            text="You don't yet have anything scheduled for"
          />
          <RalewayBoldText
            style={
              Object {
                "color": "#FFF",
                "fontSize": 16,
                "marginBottom": 10,
              }
            }
            text="25th March, 2019"
          />
        </Component>
        <Component
          style={
            Object {
              "width": 730,
            }
          }
        >
          <RalewayText
            style={
              Object {
                "color": "#53CFFF",
                "fontSize": 16,
                "marginBottom": 10,
                "marginTop": 30,
              }
            }
            text="Let's Fix That:"
          />
        </Component>
        <Component
          style={
            Object {
              "width": 730,
            }
          }
        >
          <ForwardRef(Themed.Button)
            buttonStyle={
              Object {
                "backgroundColor": "#FFF",
                "borderRadius": 10,
              }
            }
            icon={
              <Themed.Icon
                color="#2D71A8"
                iconStyle={
                  Object {
                    "position": "absolute",
                    "right": -75,
                  }
                }
                name="plus"
                size={18}
                type="font-awesome"
              />
            }
            iconRight={true}
            onPress={[Function]}
            testID="add-routine-button"
            title="Add New Routine"
            titleStyle={
              Object {
                "color": "#2D71A8",
                "fontFamily": "raleway-bold",
              }
            }
          />
        </Component>
      </Component>,
    },
  ],
}
`;

exports[`Container renderButton() should match snapshot 1`] = `[MockFunction]`;

exports[`Container should match snapshot 1`] = `ShallowWrapper {}`;

exports[`Container should match snapshot 2`] = `ShallowWrapper {}`;
